--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,5 +1,11 @@
 {
   "networking": {
     "allowedIpRanges": ["AzureFrontDoor.Backend"]
+  },
+  "forwardingGateway": {
+    "requiredHeaders": {
+      "X-Azure-FDID": "d6b19aff-a8ce-4d2f-9846-71a54cc97ffd"
+    },
+    "allowedForwardedHosts": ["fd-expert-prod-001.azurefd.net"]
   }
 }
